# SAMA-Suite

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run.ps1  run.sh  sama_suite.cc
analysis/: analyze_shielding.py  plot_energy_deposit.py  plot_particle_flux.py  requirements.txt
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorHit.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
macros/: init_vis.mac  run_electrons.mac  run_protons.mac  run_shielding_study.mac  run_trapped_spectrum.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorHit.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
